grafana/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      volumes:
        - name: grafana-pv-storage
          persistentVolumeClaim:
            claimName: grafana-pv-claim
      containers:
        - image: grafana:7.2
          name: grafana
          ports:
          - containerPort: 3000
          volumeMounts:
          - mountPath: "/var/lib/influxdb"
            name: grafana-pv-storage
