grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: grafana.sievert.fun
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
  tls:
  - hosts:
    - grafana.sievert.fun
    secretName: grafana-cert
